--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "layout components in react",
   "main": "index.js",
+  "jest": {
+    "setupFilesAfterEnv": ["<rootDir>src/setupTests.js"]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "build": "webpack -p --devtool source-map",
     "start": "webpack-dev-server --hot --mode development --devtool eval-source-map"
   },
